--- a/01 - JavaScript Drum Kit/index-START.html
+++ b/01 - JavaScript Drum Kit/index-START.html
@@ -60,6 +60,24 @@
 
 <script>
 
+  window.addEventListener('keydown', function(e){
+    const key = document.querySelector(`div[data-key="${e.keyCode}"]`)
+    
+    if(key) {
+      setTimeout(() => {
+        key.classList.remove('playing')
+      }, 200)
+        key.classList.add('playing')
+    } 
+
+
+    
+    const audio = document.querySelector(`audio[data-key="${e.keyCode}"]`)
+      if(!audio) return;
+      audio.currentTime = 0;
+      audio.play()
+  })
+
 </script>
 
 
