--- a/04 - Array Cardio Day 1/index-START.html
+++ b/04 - Array Cardio Day 1/index-START.html
@@ -76,8 +76,8 @@
 
     // 7. sort Exercise
     // Sort the people alphabetically by last name
-
-    // 8. Reduce Exercise
+//TODO 
+// 8. Reduce Exercise
     // Sum up the instances of each of these
     const data = ['car', 'car', 'truck', 'truck', 'bike', 'walk', 'car', 'van', 'bike', 'walk', 'car', 'van', 'car', 'truck' ];
 
