--- a/05 - Flex Panel Gallery/index-START.html
+++ b/05 - Flex Panel Gallery/index-START.html
@@ -25,11 +25,17 @@
     }
 
     .panels {
+      display: flex;
       min-height: 100vh;
       overflow: hidden;
     }
 
     .panel {
+      cursor: pointer;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      flex: 1;
       background: #6B0F9C;
       box-shadow: inset 0 0 0 5px rgba(255,255,255,0.1);
       color: white;
@@ -57,7 +63,18 @@
       margin: 0;
       width: 100%;
       transition: transform 0.5s;
+      flex: 1 0 auto;
+
+      justify-content: center;
+      align-items: center;
+      display: flex;
+      
     }
+
+    .panel > *:first-child { transform: translateY(-100%); }
+    .panel.open > *:first-child { transform: translateY(0); }
+    .panel > *:last-child { transform: translateY(100%); }
+    .panel.open > *:last-child { transform: translateY(0); }
 
     .panel p {
       text-transform: uppercase;
@@ -72,6 +89,7 @@
 
     .panel.open {
       font-size: 40px;
+      flex-basis: 15%;
     }
 
   </style>
@@ -106,6 +124,20 @@
   </div>
 
   <script>
+const panels = document.querySelectorAll('.panel').forEach(child => child.addEventListener('click', () => {
+    child.classList.toggle('open')
+
+}))
+ function toggleActive(e) {
+      console.log(e.propertyName);
+      if (e.propertyName.includes('flex')) {
+        this.classList.toggle('open-active');
+      }
+    }
+
+    panels.forEach(panel => panel.addEventListener('transitionend', toggleActive));
+
+
 
   </script>
 
