--- a/05 - Flex Panel Gallery/index-FINISHED.html
+++ b/05 - Flex Panel Gallery/index-FINISHED.html
@@ -69,9 +69,9 @@
     }
 
     .panel > *:first-child { transform: translateY(-100%); }
-    .panel.open-active > *:first-child { transform: translateY(0); }
+    .open > *:first-child { transform: translateY(0); }
     .panel > *:last-child { transform: translateY(100%); }
-    .panel.open-active > *:last-child { transform: translateY(0); }
+    .open > *:last-child { transform: translateY(0); }
 
     .panel p {
       text-transform: uppercase;
