--- a/07 - Array Cardio Day 2/index-START.html
+++ b/07 - Array Cardio Day 2/index-START.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <title>Array Cardio 💪💪</title>
   <link rel="icon" href="https://fav.farm/🔥" />
 </head>
+
 <body>
   <p><em>Psst: have a look at the JavaScript Console</em> 💁</p>
   <script>
@@ -27,16 +29,34 @@
 
     // Some and Every Checks
     // Array.prototype.some() // is at least one person 19 or older?
+    function hasAtLeast19YearsOld(person) {
+      return 2023 - person.year >= 19
+    }
+
+    people.some(hasAtLeast19YearsOld)
+
+
     // Array.prototype.every() // is everyone 19 or older?
+
+    function isEveryone19OrAbove(person) {
+      return 2023 - person.year >= 19
+    }
+
+    people.every(isEveryone19OrAbove)
+
 
     // Array.prototype.find()
     // Find is like filter, but instead returns just the one you are looking for
     // find the comment with the ID of 823423
+    comments.filter(element => element.id === 823423)
+
 
     // Array.prototype.findIndex()
     // Find the comment with this ID
     // delete the comment with the ID of 823423
-
+    let index = comments.findIndex(element => element.id === 823423)
+    comments.splice(index, 1)
   </script>
 </body>
+
 </html>
